--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./scss/style.scss" />
   </head>
   <body>
+    <h1>OK</h1>
     <!-- <script src="../node_modules/axios/dist/axios.min.js"></script> -->
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
